# StudyNow-Website

./: main.py  pyproject.toml
static/css/signIn/: signIn.css
static/javascript/signIn/: signIn.js
static/javascript/signUp/: signUp.js
templates/signIn/: signIn.html
templates/signUp/: signUp.html
